--- a/xc-framework-parent/pom.xml
+++ b/xc-framework-parent/pom.xml
@@ -46,7 +46,6 @@
         <ini4j.version>0.5.4</ini4j.version>
         <zip4j.version>1.3.1</zip4j.version>
         <httpclient.version>4.5.3</httpclient.version>
-        <commons-fileupload.version>1.3.3</commons-fileupload.version>
     </properties>
     <!--test-->
     <dependencyManagement>
@@ -75,16 +74,19 @@
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis-spring-boot.version}</version>
             </dependency>
+            <!--分页插件-->
             <dependency>
                 <groupId>com.github.pagehelper</groupId>
                 <artifactId>pagehelper-spring-boot-starter</artifactId>
                 <version>${pagehelper.version}</version>
             </dependency>
+            <!--druid数据库连接池-->
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid</artifactId>
                 <version>${druid.version}</version>
             </dependency>
+            <!--汉语拼音工具包-->
             <dependency>
                 <groupId>com.belerweb</groupId>
                 <artifactId>pinyin4j</artifactId>
@@ -150,16 +152,19 @@
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>${springfox-swagger.version}</version>
             </dependency>
+            <!--dom4j日志-->
             <dependency>
                 <groupId>dom4j</groupId>
                 <artifactId>dom4j</artifactId>
                 <version>${dom4j.version}</version>
             </dependency>
+            <!--糊涂工具包(所有)-->
             <dependency>
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
                 <version>${hutool-all.version}</version>
             </dependency>
+            <!--阿里巴巴json解析-->
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
@@ -193,6 +198,7 @@
                 <artifactId>ini4j</artifactId>
                 <version>${ini4j.version}</version>
             </dependency>
+            <!--文件压缩解压工具-->
             <dependency>
                 <groupId>net.lingala.zip4j</groupId>
                 <artifactId>zip4j</artifactId>
@@ -203,11 +209,7 @@
                 <artifactId>httpclient</artifactId>
                 <version>${httpclient.version}</version>
             </dependency>
-            <dependency>
-                <groupId>commons-fileupload</groupId>
-                <artifactId>commons-fileupload</artifactId>
-                <version>${commons-fileupload.version}</version>
-            </dependency>
+
         </dependencies>
     </dependencyManagement>
     <build>
