--- a/xc-framework-parent/pom.xml
+++ b/xc-framework-parent/pom.xml
@@ -46,6 +46,7 @@
         <ini4j.version>0.5.4</ini4j.version>
         <zip4j.version>1.3.1</zip4j.version>
         <httpclient.version>4.5.3</httpclient.version>
+        <spring-boot-starter-freemarker.version>2.1.3.RELEASE</spring-boot-starter-freemarker.version>
     </properties>
     <!--test-->
     <dependencyManagement>
@@ -209,6 +210,20 @@
                 <artifactId>httpclient</artifactId>
                 <version>${httpclient.version}</version>
             </dependency>
+            <!-- 页面静态化技术 -->
+            <!--<dependency>
+                <groupId>org.freemarker</groupId>
+                <artifactId>freemarker</artifactId>
+                <version>${freemarker.version}</version>
+            </dependency>-->
+            <!-- 页面静态化技术 -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-freemarker</artifactId>
+                <version>${spring-boot-starter-freemarker.version}</version>
+            </dependency>
+
+
 
         </dependencies>
     </dependencyManagement>
