--- a/xc-framework-parent/pom.xml
+++ b/xc-framework-parent/pom.xml
@@ -46,6 +46,7 @@
         <ini4j.version>0.5.4</ini4j.version>
         <zip4j.version>1.3.1</zip4j.version>
         <httpclient.version>4.5.3</httpclient.version>
+        <amqp-client.version>4.0.3</amqp-client.version>
         <spring-boot-starter-freemarker.version>2.1.3.RELEASE</spring-boot-starter-freemarker.version>
     </properties>
     <!--test-->
@@ -222,8 +223,12 @@
                 <artifactId>spring-boot-starter-freemarker</artifactId>
                 <version>${spring-boot-starter-freemarker.version}</version>
             </dependency>
-
-
+            <!--rabbitmq消息队列-->
+            <dependency>
+                <groupId>com.rabbitmq</groupId>
+                <artifactId>amqp-client</artifactId>
+                <version>${amqp-client.version}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
