--- a/xc-service-manage-cms/src/main/resources/application.yml
+++ b/xc-service-manage-cms/src/main/resources/application.yml
@@ -7,3 +7,7 @@ spring:
     mongodb:
       uri:  mongodb://root:root@111.67.207.126:27017
       database: xc_cms
+  freemarker:
+    cache: false #关闭模板缓存,方便预览
+    settings:
+      template_update_delay: 0
