--- a/xc-framework-parent/pom.xml
+++ b/xc-framework-parent/pom.xml
@@ -46,7 +46,7 @@
         <ini4j.version>0.5.4</ini4j.version>
         <zip4j.version>1.3.1</zip4j.version>
         <httpclient.version>4.5.3</httpclient.version>
-        <amqp-client.version>4.0.3</amqp-client.version>
+
         <spring-boot-starter-freemarker.version>2.1.3.RELEASE</spring-boot-starter-freemarker.version>
     </properties>
     <!--test-->
@@ -82,6 +82,13 @@
                 <artifactId>pagehelper-spring-boot-starter</artifactId>
                 <version>${pagehelper.version}</version>
             </dependency>
+<!--             https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-amqp-->
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-starter-amqp</artifactId>-->
+<!--                <version>2.1.4.RELEASE</version>-->
+<!--            </dependency>-->
+
             <!--druid数据库连接池-->
             <dependency>
                 <groupId>com.alibaba</groupId>
@@ -224,11 +231,11 @@
                 <version>${spring-boot-starter-freemarker.version}</version>
             </dependency>
             <!--rabbitmq消息队列-->
-            <dependency>
+ <!--           <dependency>
                 <groupId>com.rabbitmq</groupId>
                 <artifactId>amqp-client</artifactId>
-                <version>${amqp-client.version}</version>
-            </dependency>
+                <version>4.0.3</version>
+            </dependency>-->
 
         </dependencies>
     </dependencyManagement>
