--- a/xc-service-manage-cms/src/main/resources/application.yml
+++ b/xc-service-manage-cms/src/main/resources/application.yml
@@ -7,3 +7,13 @@ spring:
     mongodb:
       uri:  mongodb://zishuimuyu:zishuimuyu@49.235.109.97:27017
       database: xc_cms
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
+    virtualHost: /
+  freemarker:
+      cache: false  #关闭模板缓存，方便测试
+      settings:
+        template_update_delay: 0
