--- a/xc-framework-utils/pom.xml
+++ b/xc-framework-utils/pom.xml
@@ -79,6 +79,11 @@
             <groupId>org.ini4j</groupId>
             <artifactId>ini4j</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+        </dependency>
     </dependencies>
+
 
 </project>
