完善课程管理相关功能

--- a/xc-service-manage-course/src/main/resources/application.yml
+++ b/xc-service-manage-course/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
   datasource:
     druid:
       url: jdbc:mysql://49.235.109.97:3306/xc_course?characterEncoding=utf-8
-      username: zishuimuyu
-      password: zishuimuyu
+      username: root
+      password: root
       driverClassName: com.mysql.jdbc.Driver
       initialSize: 5  #初始建立连接数量
       minIdle: 5  #最小连接数量
