1.课程管理模块新增加查询,删除课程图片的方法 2.新增Eureka注册中心模块

--- a/xc-framework-parent/pom.xml
+++ b/xc-framework-parent/pom.xml
@@ -51,6 +51,7 @@
     <!--test-->
     <dependencyManagement>
         <dependencies>
+            <!-- Eureka服务的依赖 -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
@@ -178,7 +179,6 @@
                 <artifactId>fastdfs-client-java</artifactId>
                 <version>${fastdfs-client-java.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>org.elasticsearch.client</groupId>
                 <artifactId>elasticsearch-rest-high-level-client</artifactId>
