--- a/xc-framework-parent/pom.xml
+++ b/xc-framework-parent/pom.xml
@@ -21,6 +21,7 @@
         <mybatis-spring-boot.version>1.3.1</mybatis-spring-boot.version>
         <mybatis.version>3.4.5</mybatis.version>
         <druid.version>1.1.6</druid.version>
+        <druid-spring-boot-starter.version>1.1.10</druid-spring-boot-starter.version>
         <mysql-connector-java.version>5.1.45</mysql-connector-java.version>
         <mongo-java-driver.version>3.9.1</mongo-java-driver.version>
 
@@ -46,6 +47,7 @@
         <ini4j.version>0.5.4</ini4j.version>
         <zip4j.version>1.3.1</zip4j.version>
         <httpclient.version>4.5.3</httpclient.version>
+        <hibernate-core.version>5.0.12.Final</hibernate-core.version>
 
     </properties>
     <!--test-->
@@ -90,10 +92,15 @@
 <!--            </dependency>-->
 
             <!--druid数据库连接池-->
+<!--            <dependency>-->
+<!--                <groupId>com.alibaba</groupId>-->
+<!--                <artifactId>druid</artifactId>-->
+<!--                <version>${druid.version}</version>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>com.alibaba</groupId>
-                <artifactId>druid</artifactId>
-                <version>${druid.version}</version>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>${druid-spring-boot-starter.version}</version>
             </dependency>
             <!--汉语拼音工具包-->
             <dependency>
@@ -106,6 +113,7 @@
                 <artifactId>okhttp</artifactId>
                 <version>${okhttp.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>com.netflix.feign</groupId>
                 <artifactId>feign-okhttp</artifactId>
@@ -223,6 +231,12 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-freemarker</artifactId>
                 <version>${spring-boot-starter-freemarker.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>${hibernate-core.version}</version>
             </dependency>
             <!--rabbitmq消息队列-->
  <!--           <dependency>
