调整各个模块的pom.xml文件

--- a/xc-framework-model/pom.xml
+++ b/xc-framework-model/pom.xml
@@ -59,6 +59,7 @@
     <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-core</artifactId>
+        <version>5.0.12.Final</version>
     </dependency>
 
 
@@ -80,6 +81,7 @@
     <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
+        <version>24.0-jre</version>
     </dependency>
     <dependency>
         <groupId>commons-io</groupId>
