--- a/xc-govern-center/pom.xml
+++ b/xc-govern-center/pom.xml
@@ -13,20 +13,10 @@
     <artifactId>xc-govern-center</artifactId>
 
     <dependencies>
-        <!-- 导入Eureka服务端依赖 -->
+        <!-- 导入Eureka服务的依赖 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-            <exclusions>
-                <exclusion>
-                    <artifactId>jsr305</artifactId>
-                    <groupId>com.google.code.findbugs</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>HdrHistogram</artifactId>
-                    <groupId>org.hdrhistogram</groupId>
-                </exclusion>
-            </exclusions>
         </dependency>
     </dependencies>
 </project>
