--- a/xc-framework-parent/pom.xml
+++ b/xc-framework-parent/pom.xml
@@ -16,14 +16,12 @@
         <java.version>1.8</java.version>
         <tomcat.version>8.5.28</tomcat.version>
         <spring-boot.version>2.0.1.RELEASE</spring-boot.version>
-        <spring-boot-starter-freemarker.version>2.1.3.RELEASE</spring-boot-starter-freemarker.version>
         <springframework.version>5.0.5.RELEASE</springframework.version>
         <mybatis-spring-boot.version>1.3.1</mybatis-spring-boot.version>
         <mybatis.version>3.4.5</mybatis.version>
         <druid.version>1.1.6</druid.version>
-        <druid-spring-boot-starter.version>1.1.10</druid-spring-boot-starter.version>
         <mysql-connector-java.version>5.1.45</mysql-connector-java.version>
-        <mongo-java-driver.version>3.9.1</mongo-java-driver.version>
+
 
         <commons-io.version>2.6</commons-io.version>
         <org.apache.commons.io.version>1.3.2</org.apache.commons.io.version>
@@ -36,24 +34,14 @@
         <springfox-swagger.version>2.7.0</springfox-swagger.version>
         <fastjson.version>1.2.30</fastjson.version>
         <fastdfs-client-java.version>1.27.0.0</fastdfs-client-java.version>
-        <mysql-connector-java.version>5.1.47</mysql-connector-java.version>
+        <mysql-connector-java.version>5.1.40</mysql-connector-java.version>
         <elasticsearch.version>6.2.1</elasticsearch.version>
         <guava.version>24.0-jre</guava.version>
-        <pinyin4j.version>2.5.1</pinyin4j.version>
-        <poi.version>3.12</poi.version>
-        <poi-ooxml.version>3.12</poi-ooxml.version>
-        <pagehelper.version>1.2.4</pagehelper.version>
         <hutool-all.version>4.6.1</hutool-all.version>
-        <ini4j.version>0.5.4</ini4j.version>
-        <zip4j.version>1.3.1</zip4j.version>
-        <httpclient.version>4.5.3</httpclient.version>
-        <hibernate-core.version>5.0.12.Final</hibernate-core.version>
-
     </properties>
     <!--test-->
     <dependencyManagement>
         <dependencies>
-            <!-- Eureka服务的依赖 -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
@@ -61,59 +49,32 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <!--Mysql驱动-->
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql-connector-java.version}</version>
-            </dependency>
-            <!--MongoDB驱动-->
-            <dependency>
-                <groupId>org.mongodb</groupId>
-                <artifactId>mongo-java-driver</artifactId>
-                <version>${mongo-java-driver.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis-spring-boot.version}</version>
             </dependency>
-            <!--分页插件-->
             <dependency>
                 <groupId>com.github.pagehelper</groupId>
                 <artifactId>pagehelper-spring-boot-starter</artifactId>
-                <version>${pagehelper.version}</version>
+                <version>1.2.4</version>
             </dependency>
-<!--             https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-amqp-->
-<!--            <dependency>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-starter-amqp</artifactId>-->
-<!--                <version>2.1.4.RELEASE</version>-->
-<!--            </dependency>-->
-
-            <!--druid数据库连接池-->
-<!--            <dependency>-->
-<!--                <groupId>com.alibaba</groupId>-->
-<!--                <artifactId>druid</artifactId>-->
-<!--                <version>${druid.version}</version>-->
-<!--            </dependency>-->
             <dependency>
                 <groupId>com.alibaba</groupId>
-                <artifactId>druid-spring-boot-starter</artifactId>
-                <version>${druid-spring-boot-starter.version}</version>
+                <artifactId>druid</artifactId>
+                <version>${druid.version}</version>
             </dependency>
-            <!--汉语拼音工具包-->
-            <dependency>
-                <groupId>com.belerweb</groupId>
-                <artifactId>pinyin4j</artifactId>
-                <version>${pinyin4j.version}</version>
-            </dependency>
+
             <dependency>
                 <groupId>com.squareup.okhttp3</groupId>
                 <artifactId>okhttp</artifactId>
                 <version>${okhttp.version}</version>
             </dependency>
-
             <dependency>
                 <groupId>com.netflix.feign</groupId>
                 <artifactId>feign-okhttp</artifactId>
@@ -128,16 +89,6 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${org.apache.commons.io.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.poi</groupId>
-                <artifactId>poi</artifactId>
-                <version>${poi.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.poi</groupId>
-                <artifactId>poi-ooxml</artifactId>
-                <version>${poi-ooxml.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-fileupload</groupId>
@@ -169,14 +120,6 @@
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>${springfox-swagger.version}</version>
             </dependency>
-
-            <!--糊涂工具包(所有)-->
-            <dependency>
-                <groupId>cn.hutool</groupId>
-                <artifactId>hutool-all</artifactId>
-                <version>${hutool-all.version}</version>
-            </dependency>
-            <!--阿里巴巴json解析-->
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
@@ -187,11 +130,13 @@
                 <artifactId>fastdfs-client-java</artifactId>
                 <version>${fastdfs-client-java.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>org.elasticsearch.client</groupId>
                 <artifactId>elasticsearch-rest-high-level-client</artifactId>
                 <version>${elasticsearch.version}</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/org.elasticsearch/elasticsearch -->
             <dependency>
                 <groupId>org.elasticsearch</groupId>
                 <artifactId>elasticsearch</artifactId>
@@ -202,62 +147,25 @@
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/org.ini4j/ini4j -->
-            <!--ini文件解析类-->
+            <!--糊涂工具包(所有)-->
             <dependency>
-                <groupId>org.ini4j</groupId>
-                <artifactId>ini4j</artifactId>
-                <version>${ini4j.version}</version>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool-all.version}</version>
             </dependency>
-            <!--文件压缩解压工具-->
-            <dependency>
-                <groupId>net.lingala.zip4j</groupId>
-                <artifactId>zip4j</artifactId>
-                <version>${zip4j.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.httpcomponents</groupId>
-                <artifactId>httpclient</artifactId>
-                <version>${httpclient.version}</version>
-            </dependency>
-            <!-- 页面静态化技术 -->
-            <!--<dependency>
-                <groupId>org.freemarker</groupId>
-                <artifactId>freemarker</artifactId>
-                <version>${freemarker.version}</version>
-            </dependency>-->
-            <!-- 页面静态化技术 -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-freemarker</artifactId>
-                <version>${spring-boot-starter-freemarker.version}</version>
-            </dependency>
-            <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
-            <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-core</artifactId>
-                <version>${hibernate-core.version}</version>
-            </dependency>
-            <!--rabbitmq消息队列-->
- <!--           <dependency>
-                <groupId>com.rabbitmq</groupId>
-                <artifactId>amqp-client</artifactId>
-                <version>4.0.3</version>
-            </dependency>-->
-
         </dependencies>
     </dependencyManagement>
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
-            <!-- &lt;!&ndash; 资源文件拷贝插件 &ndash;&gt;
-             <plugin>
-                 <groupId>org.apache.maven.plugins</groupId>
-                 <artifactId>maven-resources-plugin</artifactId>
-                 <configuration>
-                     <encoding>UTF-8</encoding>
-                 </configuration>
-             </plugin>-->
+           <!-- &lt;!&ndash; 资源文件拷贝插件 &ndash;&gt;
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>-->
             <!-- java编译插件 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
