--- a/xc-service-manage-course/src/main/resources/application.yml
+++ b/xc-service-manage-course/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: xc-service-manage-course
   datasource:
     druid:
-      url: jdbc:mysql://49.235.109.97:3306/xc_course?characterEncoding=utf-8
+      url: jdbc:mysql://49.235.109.97:3306/xc_course?characterEncoding=UTF-8
       username: root
       password: root
       driverClassName: com.mysql.jdbc.Driver
